--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: example
+name: Code Checks
 
 on: push
 
@@ -8,3 +8,12 @@ jobs:
     steps:
       - name: Say_hi
         run: echo Good morning, baby.
+
+  test-python-3-10:
+    name: Check Python 3.10 on Ubuntu
+    runs-on: unbuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+	  python-version: "3.10"
