--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,25 @@
 name: Code Checks
-
 on: push
-
 jobs:
-  say_hi:
+  greeting:
     runs-on: ubuntu-latest
     steps:
-      - name: Say_hi
-        run: echo Good morning, baby.
+      - name: Greeting!
+        run: echo hello world
 
   test-python-3-10:
     name: Check Python 3.10 on Ubuntu
-    runs-on: unbuntu-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+
       - uses: actions/setup-python@v4
         with:
-	  python-version: "3.10"
+          python-version: "3.10"
 
       - name: Install package
-	run: python -m pip install -e .[test]
+        run: python -m pip install -e .[test]
+
       - name: Test package
-	run: python -m pytest
+        run: python -m pytest
+
